# fuse_python

./: .gitignore  LICENSE  Makefile  README.md  USAGE.md  buf.gen.yaml  buf.yaml  ci_bench_image_sha  go.work  go.work.sum  pyproject.toml  ruff.toml
.github/workflows/: bench.yml  docs.yml  publish.yml  python.yml
bench/: README.md  bench_config.toml  pyproject.toml
bench/src/bench/: agg.py  basic_df.py  basic_sql.py  coalesce.py  collect.py  datasets.py  distinct.py  drop.py  join.py  main.py  selects.py  sorts.py  test_cases.py  union.py  window.py
bench/src/bench/test_case/: __init__.py  printer.py  runner.py
bench/src/bench/tests/: setup.py  test_agg.py  test_alias.py  test_basic.py  test_window.py
bench_runner/: .gitignore  config.go  container.go  go.mod  main.go  pull_fuse.go  run_bench.go  run_fuse.go
build_scripts/: pull_fuse.sh  run_bench.sh  run_fuse.sh
datasets/: census_sf_1.csv  census_sf_2.csv  census_sf_3.csv
declaredata_fuse/: pyproject.toml
declaredata_fuse/src/declaredata_fuse/: __init__.py  agg.py  column.py  column_abc.py  column_alias.py  column_coalesce.py  column_contains.py  column_filter.py  column_literal.py  column_when.py  dataframe.py  functions.py  functions_filter.py  grouped.py  patch.py  session.py  table.py  window.py
docs/: CNAME  declaredata_fuse.html  index.html  search.js
docs/declaredata_fuse/: agg.html  column.html  column_abc.html  column_alias.html  column_coalesce.html  column_filter.html  column_functional.html  column_literal.html  column_op.html  column_or_name.html  dataframe.html  dataframe_impl.html  functions.html  grouped.html  proto.html  row.html  session.html  window.html
docs/declaredata_fuse/dataframe_impl/: collect.html  drop.html  join.html  select.html  sort.html
docs/declaredata_fuse/proto/: sds_pb2.html  sds_pb2_grpc.html
docs/templates/: index.html.jinja2
fuse_bench/: README.md  pyproject.toml
fuse_bench/src/fuse_bench/: agg.py  basic_df.py  basic_sql.py  collect.py  drop.py  main.py  selects.py  sorts.py  test_cases.py  timing.py  window.py
fuse_bench/src/fuse_bench/test_case/: __init__.py  printer.py  runner.py
fuse_python/: pyproject.toml
magefiles/: cmd.go  config.go  env.go  go.mod  go.sum  pull_fuse.go  run_bench.go  run_fuse.go
proto/: sds.proto
(+40 files in other folders)
