[project]
name = "bench"
version = "0.1.0"
description = "Benchmarks for the Python Fuse client bindings"
authors = [{ name = "Aaron Schlesinger", email = "aaron@ecomaz.net" }]
dependencies = ["click>=8.1.7", "declaredata_fuse"]
readme = "README.md"
requires-python = ">= 3.10"

[tool.uv.sources]
declaredata_fuse = { workspace = true }

[project.scripts]
"bench" = "bench:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bench"]
