[project]
name = "fuse_bench"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Aaron Schlesinger", email = "aaron@ecomaz.net" }]
dependencies = [
    "click>=8.1.7",
    "fuse_python",
]
readme = "README.md"
requires-python = ">= 3.10"

[tool.uv.sources]
fuse_python = { workspace = true }

[project.scripts]
"fuse_bench" = "fuse_bench:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fuse_bench"]
